--- a/package.json
+++ b/package.json
@@ -20,30 +20,32 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.24",
+    "axios": "^1.7.9",
+    "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.3",
-    "expo-image-picker": "~16.0.3",
-    "expo-linking": "~7.0.3",
+    "expo-constants": "~17.0.4",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
+    "expo-image-picker": "~16.0.4",
+    "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
-    "expo-splash-screen": "^0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -52,9 +54,10 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
